fix css type on line 120. overflow is now scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ button:hover, .control:hover {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: scraoll;
+    overflow: scroll;
     background-color: rgba(0,0,0,0.4);
   }
   
